--- a/team.html
+++ b/team.html
@@ -40,7 +40,7 @@
             >
               <span class="text-part">Impression</span>
               <div class="logo-container">
-                <img src="img/Impress.png" alt="Impress" class="logo" />
+                <img src="img/impress.png" alt="Impress" class="logo" />
               </div>
             </a>
         </article>
